Update UI of Cricket Game

--- a/Simple Projects/Cricket Game/cricket.html
+++ b/Simple Projects/Cricket Game/cricket.html
@@ -58,13 +58,14 @@
                 </div>
 
                 <div class="controls">
-                    <button id="reset-btn" class="reset-button" onclick="localStorage.clear(); resetScore();">Reset</button>
+                    <button id="reset-btn" class="reset-button"
+                        onclick="localStorage.clear(); resetScore();">Reset</button>
                 </div>
             </div>
         </section>
 
         <footer class="app-footer">
-            <small>Have fun  and Beat the computer on your guessing confidence.</small>
+            <small>Have fun and Beat the computer on your guessing confidence.</small>
         </footer>
     </main>
 
