--- a/Practices & Exercises/Project_Exercises/joke/TellMeJoke.html
+++ b/Practices & Exercises/Project_Exercises/joke/TellMeJoke.html
@@ -10,9 +10,9 @@
 
 <body>
     <nav>
-        <li>Home</li>
+        <li id="home">Home</li>
         <li>About</li>
-        <li>Blog</li>
+        <li id="jokes">Jokes</li>
         <li>Contact</li>
     </nav>
     <h1>Random Joke Generator</h1>
